# PyChiquito

./: .gitignore  .gitmodules  Cargo.toml  README.md  cb.py  chiquito_ast.py  dsl.py  expr.py  fibonacci.py  pyproject.toml  query.py  requirements.txt  test.py  zktypes.py
.env/: fibonacci.py  pychiquito.py  pyvenv.cfg  util.py
.env/src/: cb.py  dsl.py  fibonacci.py  tests.py  util.py  wit_gen.py
.github/workflows/: CI.yml
examples/: fibonacci.py  mimc7.py  simple.py  tutorial_pt2.ipynb  tutorial_pt3_ch2.ipynb
pychiquito/: ast.py  cb.py  chiquito_ast.py  dsl.py  expr.py  fibo.py  fibonacci.py  query.py  tests.py  tutorial.ipynb  tutorial_ch1.ipynb  tutorial_ch2.ipynb  tutorial_ch3_pt1.ipynb  tutorial_ch3_pt2.ipynb  tutorial_pt3_ch1.ipynb  tutorial_pt3_ch2.ipynb  tutorial_pt3_ch3.ipynb  tutorial_pt3_ch4.ipynb  tutorial_pt3_ch5.ipynb  wit_gen.py
python/chiquito/: cb.py  chiquito_ast.py  dsl.py  lb.py  wit_gen.py
src/: chiquito_ast.py  convert_to_chiquito.rs  deserialize.rs  deserialize_types.rs  dsl.py  fibonacci.py  lib.rs  pychiquito.py  wit_gen.py
src/deserialize_types/: ast.rs  dsl.rs  wit_gen.rs
src/deserialize_types/ast/: expr.rs
src/deserialize_types/ast/expr/: query.rs
src/tests/: test_deserialize.rs
test/: fibonacci.py
